[package]
name = "minithreadlocal"
version = "0.1.0"
authors = ["N/A <N/A>"]
edition = "2018"

[lib]
name = "minithreadlocal"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [    "winerror"
                                            ,"processthreadsapi"
                                            ,"errhandlingapi"
]}